# priority-notify-android

./: .gitignore  android.spec.md  openapi.yaml
.github/workflows/: android.yml
src/: index.html  main.js  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/plugins/tauri-plugin-background-check/: Cargo.toml  build.rs
src-tauri/plugins/tauri-plugin-background-check/android/: build.gradle.kts
src-tauri/plugins/tauri-plugin-background-check/android/src/main/java/: BackgroundCheckPlugin.kt  NotificationCheckWorker.kt
src-tauri/plugins/tauri-plugin-background-check/permissions/: default.toml
src-tauri/plugins/tauri-plugin-background-check/src/: lib.rs
src-tauri/plugins/tauri-plugin-unifiedpush/: Cargo.toml  build.rs
src-tauri/plugins/tauri-plugin-unifiedpush/android/: build.gradle.kts
src-tauri/plugins/tauri-plugin-unifiedpush/android/src/main/: AndroidManifest.xml
src-tauri/plugins/tauri-plugin-unifiedpush/android/src/main/java/: PushReceiver.kt  UnifiedPushPlugin.kt
src-tauri/plugins/tauri-plugin-unifiedpush/android/src/main/res/drawable/: ic_notification.xml
src-tauri/plugins/tauri-plugin-unifiedpush/permissions/: default.toml
src-tauri/plugins/tauri-plugin-unifiedpush/src/: lib.rs
src-tauri/src/: api.rs  commands.rs  lib.rs  models.rs  reminder.rs  sse.rs
